# ros_text_speech

./: CMakeLists.txt  README.md  files.json  package.xml
launch/: speech.launch
storedSpeech/: HUGAnEwcLctb2bAe3UlLzUYZFCZk9DfOftYS8U3R5u25VCjXeV  S7JKW1ZPm102Jj20hc4xHBQDR1pyldCEjWWFV3dH4dJNLJL0vP  W6F47AEPYxj0LCQNrITbKFZCo34adrC8xPC5aQU6LD6gNW3FmX  h8yeFU64EfGqnU1F8vpwLeZ1xCHNiMUQSQ2hs8k4o0sZUtocnb  j8ReCe3PcyG1kgPxFzkWTEhanQ719GHtPiVZKYwuXAvFpJC4Gv  lSHDlnUpDew72QQlKdRKsKtJ0or7gHHRjZeUK7IVlEcle2Wyev  q6mQGZRK73BH99hJCFhgJ3tPjFtlUdIIj2gzZ6Ih7TwGabZmoG  sbzQADbixita6ZUeza6219v4EOEyvrRoSOCbbnJWVC7bjZDj9I  xAaLMzK9x6mAITeoj9rKOtvfGGyaEsx92WVOVnXRtIZBlDxSKm
